--- a/header/header.css
+++ b/header/header.css
@@ -183,3 +183,20 @@ cursor: pointer;
   
 
   }
+ .profile button{
+    display: flex;
+width: 40px;
+height: 40px;
+padding: 10px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 10px;
+border: none;
+  }
+  
+  .contacts_part2{
+    display: flex;
+    align-items: center;
+   gap: 70px;
+  }
