--- a/doctorDetail/doctordetail.css
+++ b/doctorDetail/doctordetail.css
@@ -10,7 +10,8 @@
 .doctor_detail_container  { 
 	width: 1440px;
     max-width: 100%;
-    padding: 0 150px; 
+
+  
 } 
 
 .doctor_head_img{
@@ -85,6 +86,7 @@ line-height: 80px; /* 133.333% */
   .doctor_card_detail_data{
     display: flex;
     flex-direction: column;
+  
     gap: 20px;
   }
   .service_card_detail_img img{
@@ -162,12 +164,17 @@ gap: 20px;
   .doctor_card_detail{
     display: flex;
     gap: 20px;
+    justify-content: center;
+    margin: 0 auto;
+   
   }
 .doctor_card_detail_part1{
   padding-left: 40px;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  width: 350px;
+  
 }
 
 
