--- a/services/services.css
+++ b/services/services.css
@@ -14,6 +14,7 @@ body {
 .service_container  { 
 	width: 1440px;
     max-width: 100%;
+  
  
   
    
@@ -122,12 +123,12 @@ cursor: pointer;
 	font-size: 16px; 
 }
 .service_head_img{
-    position: relative;
+  
     
     height: 550px;
 
 }
-.service_head_img img{
+.service_head_img img{  position: relative;
     width: 100%;
 }
   
@@ -171,7 +172,7 @@ line-height: 26px; /* 162.5% */
 
   .service_img_text{
     position: absolute;
-    bottom: 100px;
+    bottom: 150px;
     left: 100px;
     z-index: 10;
   }
