--- a/aboutpage/aboutus.css
+++ b/aboutpage/aboutus.css
@@ -14,15 +14,16 @@
 
 
 
-   .meet_our_specialist{
-    width: 1140px;
-    margin: 20px 105px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.meet_our_specialist{
 
-    
-   }
+  max-width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  
+ }
 
    .meet_our_specialist h1{
     color: var(--Dark-500, #0E140F);
@@ -56,6 +57,7 @@ line-height: 26px; /* 162.5% */
     
    }
    
+ 
    :root{
     --col-:4;
    }
@@ -259,11 +261,12 @@ font-weight: 700;
 line-height: 80px; /* 133.333% */
 }
 .why_choose_us{
-  padding: 0 150px;
+ 
   display: flex;
-  margin-top: 50px;
-  margin-bottom: 100px;
-  gap: 50px;
+  gap: 20px;
+  justify-content: center;
+  margin: 50px auto;
+
 
 }
 
@@ -354,10 +357,11 @@ line-height: 26px; /* 162.5% */
   width: 540px;
   height: 540px;
   position: relative;
+ 
 
 }
 .why_choose_us_part2 svg{
- width: 100%;
+  height: 540px;
 flex-shrink: 0;
 fill: var(--Primary-500, #50945D);
 position: absolute;
@@ -368,20 +372,25 @@ bottom: 0 ;
 .why_choose_us_part2 :nth-child(2){
   position: absolute;
   bottom: 0;
+ 
+  width: 450px;
 
 }
 .why_choose_us_part2 :nth-child(3){
   
   position: absolute;
-  right: 0;
+ left: 400px;
 
 
 }
 .our_values{
-  padding: 0 150px;
+ width: 1200px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   gap: 20px;
+  margin:0 auto ;
 }
 .value{
   width: 270px;
@@ -439,9 +448,11 @@ font-weight: 400;
 line-height: 26px; /* 162.5% */
 }
 .our_features{
-  margin: 50px 0;
-  padding: 0 150px;
+  
   display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 50px auto;
  
 }
 .our_features_part1_doctor_img{
@@ -461,7 +472,7 @@ background: url(<path-to-image>) lightgray -273.088px -28.143px / 237.543% 158.4
 border-radius: 0 150px;
 position: absolute;
 right: 0;
-bottom: 0 ;
+bottom: 0;
 z-index: -1;
 
 }
@@ -477,6 +488,7 @@ top: 0;
 }
 .our_features_part1{
   position: relative;
+  width: 490px;
 }
 .tours_half{
   width: 192.099px;
@@ -502,10 +514,11 @@ height: 184.985px;
 flex-shrink: 0;
 }
 .our_features_part2{
-  padding: 0 60px;
+
   display: flex;
   flex-direction: column;
-  gap:30px
+  gap:30px;
+  width: 650px;
 }
 .our_features_part2 h1{
   color: var(--Dark-500, #0E140F);
