--- a/contact-us/contactus.css
+++ b/contact-us/contactus.css
@@ -8,67 +8,8 @@
 body {
   font-family: "Roboto", sans-serif;
 }
-.background_contactus {
-  background-image: url("./static/images/Rectangle 6.svg");
-  width: 100%;
-  height: 550px;
-  background-size: cover;
-  background-position: center;
-  position: relative;
 
-}
-.container_contactus li{
-  color: var(--White-500, #FFF);
 
-/* Body-1 Regular */
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 26px; /* 162.5% */
-}
-.container_contactus{
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-/* BELE AYIRMALISAN TAGLARI */
-.container_contactus h1{ 
-  color: var(--White-500, #FFF);
-
-/* Header-2 Bold */
-font-family: Roboto;
-font-size: 60px;
-font-style: normal;
-font-weight: 700;
-line-height: 80px; /* 133.333% */
-
-}
-.content {
-  position: absolute;
-  bottom: 80px;
-  left: 150px;
-  color: white;
-}
-
-.breadcrumb {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  padding-top: 10px;
-}
-.breadcrumb-item {
-  color: white;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 26px;
-}
-.breadcrumb i {
-  margin: 0 5px;
-}
-.breadcrumb-item.active {
-  color: white;
-}
 .section-left {
   width: 555px;
   height: 467px;
@@ -233,4 +174,69 @@ line-height: 26px; /* 162.5% */
   margin-top: 20px;
   display: flex;
   gap: 30px;
+}
+
+.contact_head_img{
+  position: relative;
+  
+  height: 550px;
+
+}
+.contact_head_img img{
+  width: 100%;
+}
+
+/* Display list items side by side */
+.breadcrumb li {
+  display: inline;
+  font-size: 18px;
+}
+
+/* Add a slash symbol (/) before/behind each list item */
+.breadcrumb li+li:before {
+  padding: 8px;
+  color: var(--White-500, #FFF);
+  content: ">\00a0";
+}
+
+/* Add a color to all links inside the list */
+.breadcrumb li a {
+color: var(--White-500, #FFF);
+
+/* Body-1 Regular */
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+
+  /* Body-1 Regular */
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+
+/* Add a color on mouse-over */
+.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
+
+.contact_img_text{
+  position: absolute;
+  bottom: 100px;
+  left: 100px;
+  z-index: 10;
+}
+.contact_img_text h2{
+  color: var(--White-500, #FFF);
+
+/* Header-2 Bold */
+font-family: Roboto;
+font-size: 60px;
+font-style: normal;
+font-weight: 700;
+line-height: 80px; /* 133.333% */
 }
